[package]
name = "delgada"
version = "0.0.1"
authors = ["Hawk Ticehurst <hawkticehurst@gmail.com>"]
edition = "2021"
license = "MIT"
build = "build.rs"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0.0", default-features = false, features = ["napi4"] }
napi-derive = "2.0.0"
kuchiki = "0.8.1"
html5ever = "0.25.1"
colored = "2"
glob = "0.3.0"

[build-dependencies]
napi-build = "1.2.0"

[profile.release]
lto = true
